Thu Jun  4 14:36:00 UTC 2005  Ming Xiong <mxiong@dre.vanderbilt.edu>

        * DAnCE/examples/Quoter/Distributor/Distributor_exec.h
        * DAnCE/examples/Quoter/Distributor/Distributor_exec.cpp

          Fixed a virtual hiding warning reported on WinXP_BCB6_Pro_Dynamic_Debug

Thu Jun  9 09:31:28 2005  Simon McQueen  <sm@prismtech.com>

        * NEWS:

          Updated with late release note submissions.

Wed Jun 08 08:50:35 2005  Simon McQueen  <sm@prismtech.com>

        * CIAO version 0.4.6 released.

Wed Jun  8 11:21:50 2005  Simon McQueen  <sm@prismtech.com>

        * NEWS:

          Updated with release note entries.

Mon Jun  6 12:33:16 2005  Simon McQueen  <sm@prismtech.com>

        * DAnCE/examples/Display/GPS/GPS.mpc:

          Added HUDisplay_DnC_svnt to after tag for project GPS_DnC_svnt
          to fix build error on BCB 6 dynamic build.


Thu Jun  2 22:56:11 UTC 2005  Gan Deng <gan.deng@vanderbilt.edu>

        * DAnCE/examples/Quoter/README.html

          Added a link to the CoSMIC quoter tutorial page hosted by
          Ming Xiong.

        * NEWS

          Updated NEWS file.

Tue May 31 22:46:06 UTC 2005  Jeff Parsons <j.parsons@vanderbilt.edu>

        * CIDLC/ExecutorMappingGenerator.cpp:
        * CIDLC/ServantHeaderGenerator.cpp:
        * CIDLC/TypeNameEmitter.cpp:

          Eliminated unused arguments.

Mon May 30 15:22:16 2005  Emre Turkay  <turkaye@dre.vanderbilt.edu>

        * DAnCE/Config_Handlers/XML_File_Intf.h:
        * DAnCE/Config_Handlers/DP_Handler.h:

          auto_ptr is changed with ACE_Auto_Ptr, auto_ptr does not have
          reset in VC6.

Mon May 30 17:59:28 UTC 2005  Jeff Parsons <j.parsons@vanderbilt.edu>

        * CIDLC/TypeNameEmitter.cpp:

          Fixed incorrect code generation in *_svnt.cpp file for
          attribute assignment of sequence types. Thanks to Sunil Rottoo
          <srottoo@adacelcanada.com> for reporting the problem.
